<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/background_card"
    android:padding="16dp"
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/etTask"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/a_ade_la_tarea"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/negocios"
            android:checked="true"
            android:textColor="@color/white"
            android:buttonTint="@color/business_category"
           />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:textColor="@color/white"
            android:buttonTint="@color/accent"/>

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otros"
            android:textColor="@color/white"
            android:buttonTint="@color/accent"/>


    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/peso_normal"
        android:text="@string/crear_tarea"
        android:textColor="@color/white"/>
    


</androidx.appcompat.widget.LinearLayoutCompat>