<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_todo_app"
        tools:context=".todoapp.TodoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="@string/bienvenido"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="36dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorias"
            android:textColor="@color/subtitle_text"
            android:textSize="22sp"
            android:layout_marginHorizontal="32dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tareas"
            android:textColor="@color/subtitle_text"
            android:textSize="22sp"
            android:layout_marginHorizontal="32dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"/>


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        android:layout_margin="32dp"
        app:tint= "@color/white"
        app:backgroundTint="@color/accent"
        app:fabSize="normal"
        android:layout_gravity="end|bottom"/>

</FrameLayout>